# sync_player

./: .gitignore  README.md
client/: CMakeLists.txt  main.cpp  simple.cpp
server/: CMakeLists.txt  main.cpp  networkData.hh
